fix: fix broken div on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,16 +111,6 @@ body {
         height: 250px;
         width: 250px;
     }
-
-    /* --- --- --- CONTAINERS --- --- --- */
-    .box {
-        border-top: 4px solid #DDD;
-        border-bottom: 4px solid #DDD;
-        width: 90%;
-        height: 80%;
-
-    }
-    
     .box div {
         width: 80%;
         height: 80%;
@@ -213,5 +203,56 @@ body {
 
     .h4-header {
         font-size: 10px;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+
+    /* --- --- --- IMAGES --- --- --- */
+    .presentation-img {
+        border-radius: 50%;
+        height: 100px;
+        width: 100px;
+    }
+
+    /* --- --- --- CONTAINERS --- --- --- */
+    .box {
+        margin-top: 20px !important;
+        margin-bottom: 20px !important;
+        position: relative;
+        border-radius:10px;
+        padding: 8px;
+        border-top: 2px solid #DDD;
+        border-bottom: 2px solid #DDD;
+        width: 95%;
+        height: 90%;
+
+    }
+    
+    .box div {
+        width: 100%;
+        height: 100%;        
+        text-align: center;
+    }
+
+    .icon-text {
+        font-size: 12px;
+        padding:3px;
+    }
+
+    .h1-header {
+        font-size: 24px;
+    }
+
+    .h2-header {
+        font-size: 18px;
+    }
+
+    .h3-header {
+        font-size: 12px;
+    }
+
+    .h4-header {
+        font-size: 8px;
     }
   }
